force-app/main/default/objects/Television__c/Television__c.object-meta.xml
<CustomObject>
    <description>This Object contain the data of television</description>
    <label>Television</label>
    <nameField>
        <displayFormat>TV-{0000}</displayFormat>
        <label>Unique Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Televisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>