force-app/main/default/objects/Television__c/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <description>This field contain  Customer City</description>
    <inlineHelpText>Customer City</inlineHelpText>
    <label>Customer City</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>