force-app/main/default/objects/Television__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field contain Customer Email</description>
    <inlineHelpText>Customer Email</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>