force-app/main/default/objects/Television__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>This field contain Customer Name</description>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Customer Name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>