force-app/main/default/objects/Television__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>This field contain Customer Phone number</description>
    <inlineHelpText>Customer Phone number</inlineHelpText>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>