force-app/main/default/objects/Television__c/fields/Customer_pin_code__c.field-meta.xml
<CustomField>
    <fullName>Customer_pin_code__c</fullName>
    <description>This field contain the Customer pin-code</description>
    <inlineHelpText>Customer pin-code</inlineHelpText>
    <label>Customer pin-code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>