force-app/main/default/objects/Television__c/fields/Model_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Brand_Name__c</fullName>
    <description>This field contain Model Brand Name</description>
    <inlineHelpText>Television Model Brand Name</inlineHelpText>
    <label>Model Brand Name</label>
    <type>TextArea</type>
</CustomField>