force-app/main/default/objects/Television__c/fields/Model_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Display_Type__c</fullName>
    <description>This field contain Model Display Type</description>
    <inlineHelpText>Television Model Display Type</inlineHelpText>
    <label>Model Display Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>