force-app/main/default/objects/Television__c/fields/Model_Price__c.field-meta.xml
<CustomField>
    <fullName>Model_Price__c</fullName>
    <description>This field contain price of the model</description>
    <inlineHelpText>Television Model Price</inlineHelpText>
    <label>Model Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>