force-app/main/default/objects/Television__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <description>This field having the list of model type</description>
    <inlineHelpText>Television Model Type</inlineHelpText>
    <label>Model Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>