force-app/main/default/objects/Television__c/recordTypes/Apple.recordType-meta.xml
<RecordType>
    <fullName>Apple</fullName>
    <active>true</active>
    <description>Record type of Apple</description>
    <label>Apple</label>
</RecordType>