force-app/main/default/objects/Television__c/recordTypes/Croma.recordType-meta.xml
<RecordType>
    <fullName>Croma</fullName>
    <active>true</active>
    <description>Record type Croma</description>
    <label>Croma</label>
</RecordType>