force-app/main/default/objects/Television__c/recordTypes/LG.recordType-meta.xml
<RecordType>
    <fullName>LG</fullName>
    <active>true</active>
    <description>Record type of LG model</description>
    <label>LG</label>
</RecordType>