force-app/main/default/objects/Television__c/recordTypes/Samsung.recordType-meta.xml
<RecordType>
    <fullName>Samsung</fullName>
    <active>true</active>
    <description>Record type of Samsung model</description>
    <label>Samsung</label>
</RecordType>