force-app/main/default/objects/Television__c/recordTypes/Xiaomi.recordType-meta.xml
<RecordType>
    <fullName>Xiaomi</fullName>
    <active>true</active>
    <description>Record type of Xiaomi</description>
    <label>Xiaomi</label>
</RecordType>